Devtools: Fix clipping with device emulation.

8bb58f52036793831d0363c285a6b159b21513d9 exposed a pre-existing bug on Mac
whereby an incorrect device scale factor was passed into the compositor
when device emulation mode was turned on. This bug only occurs on Mac
because Mac and Windows used different code paths for device scale factor.

Windows always reports to the compositor a device scale factor of 1, and then
passes the real device scale factor to Blink which deals with the scaling itself.

Mac reports the actual device scale factor to the compositor along with Blink.
Blink doesn't deal with the scaling directly via zoom.

In either case, device emulation can change the device scale factor. The DSF
reported to the compositor must be the non-emulated DSF. The pre-existing bug
was that we passed the post-emulation device scale factor to the compositor which
affected clipping.

Bug: 819489
Change-Id: Iecf87b5fcb22695a4af2213daf3f0597ddbffc20
Reviewed-on: https://chromium-review.googlesource.com/954122
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/branch-heads/3325@{#675}
Cr-Branched-From: bc084a8b5afa3744a74927344e304c02ae54189f-refs/heads/master@{#530369}